Bug 474557 - Toolbar move handle disappear
Summary: Toolbar move handle disappear
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.2.0-rc1
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-09-15 14:44 UTC by mbcnve
Modified: 2023-09-29 09:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fig1. Toolbar move handle (16.83 KB, image/png)
2023-09-15 14:45 UTC, mbcnve
Details
Fig2. Toolbar move handle disapper (19.10 KB, image/png)
2023-09-15 14:46 UTC, mbcnve
Details
Fig3. Configure Toolbars (30.72 KB, image/png)
2023-09-15 15:02 UTC, mbcnve
Details
Fig4. Floating Toolbars (134.78 KB, image/png)
2023-09-15 15:03 UTC, mbcnve
Details
Fig5. Toolbars Disappear (124.09 KB, image/png)
2023-09-15 15:03 UTC, mbcnve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mbcnve 2023-09-15 14:44:08 UTC
The move handles of Toolbars (Fig1) disapper (Fig2) since Krita 5.2.0, including 5.2.0-rc1 that released today. After opens “Configure Toolbars” (Fig3) and clicks “OK”, the missing toolbars recover. When the toolbars are dragged to float around (Fig4), the whole toolbar will disapper after Krita reboots (Fig5).
Comment 1 mbcnve 2023-09-15 14:45:18 UTC
Created attachment 161636 [details]
Fig1. Toolbar move handle
Comment 2 mbcnve 2023-09-15 14:46:07 UTC
Created attachment 161637 [details]
Fig2. Toolbar move handle disapper
Comment 3 mbcnve 2023-09-15 15:02:34 UTC
Created attachment 161638 [details]
Fig3. Configure Toolbars
Comment 4 mbcnve 2023-09-15 15:03:09 UTC
Created attachment 161639 [details]
Fig4. Floating Toolbars
Comment 5 mbcnve 2023-09-15 15:03:41 UTC
Created attachment 161640 [details]
Fig5. Toolbars Disappear
Comment 6 Dmitry Kazakov 2023-09-22 14:08:33 UTC
Git commit 7cd514cf96d4d8f9bb67f8dc1e01590522f43a27 by Dmitry Kazakov.
Committed on 22/09/2023 at 16:08.
Pushed by dkazakov into branch 'master'.

[FEATURE] Add Lock Toolbars action to the Settings menu

Also fix some inconsistencies with the how it is applied

M  +10   -0    krita/krita.action
M  +1    -0    krita/krita5.xmlgui
M  +9    -2    libs/ui/KisMainWindow.cpp
M  +1    -0    libs/widgetutils/CMakeLists.txt
A  +13   -0    libs/widgetutils/xmlgui/KisToolBarStateModel.cpp     [License: GPL(v2.0+)]
A  +31   -0    libs/widgetutils/xmlgui/KisToolBarStateModel.h     [License: GPL(v2.0+)]
M  +32   -12   libs/widgetutils/xmlgui/ktoolbar.cpp
M  +3    -0    libs/widgetutils/xmlgui/ktoolbar.h

https://invent.kde.org/graphics/krita/-/commit/7cd514cf96d4d8f9bb67f8dc1e01590522f43a27
Comment 7 Dmitry Kazakov 2023-09-22 15:47:24 UTC
Git commit 1fd54e5f5575b499372a6d00c36b90c20f1ef31e by Dmitry Kazakov.
Committed on 22/09/2023 at 17:47.
Pushed by dkazakov into branch 'master'.

Make sure that toolbar's locked state is saved/restored between runs

M  +1    -3    libs/ui/KisMainWindow.cpp
M  +3    -4    libs/widgetutils/xmlgui/kmainwindow.cpp

https://invent.kde.org/graphics/krita/-/commit/1fd54e5f5575b499372a6d00c36b90c20f1ef31e
Comment 8 Dmitry Kazakov 2023-09-29 09:30:02 UTC
Git commit 75740f278c764cc6abcceda06fc912ef506097d6 by Dmitry Kazakov.
Committed on 29/09/2023 at 11:21.
Pushed by dkazakov into branch 'krita/5.2'.

Make sure that toolbar's locked state is saved/restored between runs

M  +1    -3    libs/ui/KisMainWindow.cpp
M  +3    -4    libs/widgetutils/xmlgui/kmainwindow.cpp

https://invent.kde.org/graphics/krita/-/commit/75740f278c764cc6abcceda06fc912ef506097d6
Comment 9 Dmitry Kazakov 2023-09-29 09:30:10 UTC
Git commit 794d4d491d7089e55996a726d8c3d40e4994fcaa by Dmitry Kazakov.
Committed on 29/09/2023 at 11:21.
Pushed by dkazakov into branch 'krita/5.2'.

[FEATURE] Add Lock Toolbars action to the Settings menu

Also fix some inconsistencies with the how it is applied

M  +10   -0    krita/krita.action
M  +1    -0    krita/krita5.xmlgui
M  +9    -2    libs/ui/KisMainWindow.cpp
M  +1    -0    libs/widgetutils/CMakeLists.txt
A  +13   -0    libs/widgetutils/xmlgui/KisToolBarStateModel.cpp     [License: GPL(v2.0+)]
A  +31   -0    libs/widgetutils/xmlgui/KisToolBarStateModel.h     [License: GPL(v2.0+)]
M  +32   -12   libs/widgetutils/xmlgui/ktoolbar.cpp
M  +3    -0    libs/widgetutils/xmlgui/ktoolbar.h

https://invent.kde.org/graphics/krita/-/commit/794d4d491d7089e55996a726d8c3d40e4994fcaa