[FEATURE] Add Lock Toolbars action to the Settings menu

Also fix some inconsistencies with the how it is applied

BUG:474557